--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
 <body>
 
-    <div>
-        <div></div>
-        <div></div>
+    <div class="header">
+        <div class="header__logo">
+            <img src="linkedin.png">
+        </div>
+        <div class="buttons">
+            <a class="join-button" href="https://www.google.com">
+                <button class="join-button-radius">Join now</button>
+            </a>
+            <a class="sign-button" href="https://google.com">
+                <button class="sign-button-radius">Sign in</button>
+            </a>
+        </div>
     </div>
     <div class="page-context">
         <div>
